Add Benchmark Parser and result